fix menu--left spacing

--- a/less/style/blocks/menu.less
+++ b/less/style/blocks/menu.less
@@ -26,7 +26,7 @@
 
   .menu__link {
     display: block;
-    padding: 6px 0 6px 12px;
+    padding: 12px 0 12px 12px;
     margin-left: 8px;
     position: relative;
     color: @color-gray--dark;
@@ -54,10 +54,10 @@
   }
 
   .menu__link--category {
+    margin-top: 12px;
     font-weight: bold;
     color: @color-light-blue--light;
-
-    margin-top: 12px;
+    font-size: 1.1em;
 
     //reset hover from above
     &:hover {
